added restExceptionHandler, User CRUD, Aviation resposnse POJOs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 api.key=CHANGE_ME
+spring.profiles.active=tst
+
+jsonFilePath=src/main/resources/static/Airports.JSON
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/mydatabase
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
